Links de Portfolio, web Design, modificación en los 'Latest tweets'

--- a/estilo/bootstrap.css
+++ b/estilo/bootstrap.css
@@ -10993,7 +10993,11 @@ span:before, span:after{
   text-decoration: none;
 }
 
-@media only screen and (max-width: 480px) {
+.portPort{
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 768px) {
   body{
     max-width: 768px;
   }
